--- a/StockWebEduardoVasquez/StockWebEduardoVasquez.csproj
+++ b/StockWebEduardoVasquez/StockWebEduardoVasquez.csproj
@@ -10,4 +10,10 @@
     <PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Dao\" />
+    <Folder Include="Formularios\" />
+    <Folder Include="Src\" />
+  </ItemGroup>
+
 </Project>
