--- a/StockWebEduardoVasquez/StockWebEduardoVasquez.csproj
+++ b/StockWebEduardoVasquez/StockWebEduardoVasquez.csproj
@@ -11,7 +11,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Formularios\" />
+    <Folder Include="Formularios\Electrodomesticos\" />
+    <Folder Include="Formularios\Inventario\" />
+    <Folder Include="Formularios\Usuarios\" />
+    <Folder Include="Formularios\SucursalElectrodomestico\" />
+    <Folder Include="Formularios\Sucursal\" />
     <Folder Include="Src\" />
   </ItemGroup>
 
